--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "npx scripts/seed.ts",
+    "seed:clear": "npx scripts/clear.ts"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@clerk/backend": "^2.29.2",
+    "@clerk/nextjs": "^6.36.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.31.2",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "shadcn": "^3.6.2",
+    "svix": "^1.84.1",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
